# proofpix-demo

./: .gitignore  Cargo.toml
backend/: Cargo.toml  Rocket.toml
backend/src/: appattest.rs  appattest.ts  db.rs  main.rs  utils.rs
mobile_app/: Package.swift
mobile_app/.swiftpm/xcode/xcuserdata/kayleegeorge.xcuserdatad/xcschemes/: xcschememanagement.plist
mobile_app/App/: AppAttestManager.swift  AuthenticityManager.swift  Camera.swift  CameraView.swift  DataModel.swift  LocationManager.swift  Persistence.swift  ProverManager.swift  SecureEnclaveManager.swift
src/: main.rs  utils.rs
tests/: Cargo.toml
tests/src/: main.rs
