[package]
name = "appattest-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.8"
app-attest = { git = "https://github.com/kayleegeorge/app-attest" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
redis = { version = "0.23.0", features = ["aio"] }
