[package]
name = "appattest-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.8"
app-attest = { git = "https://github.com/kayleegeorge/app-attest" }
dotenv = "0.15"
redis = { version = "0.23.0", features = ["tokio-comp", "aio"] }
aws-config = "0.5"
aws-sdk-s3 = "0.5"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }